--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ db/runteq_normal_development
 db/runteq_normal_test
 
 /public/uploads
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
